force-app/main/default/objects/Flight__c/Flight__c.object-meta.xml
<CustomObject>
    <label>Flight</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Flight Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>