force-app/main/default/objects/Flight__c/fields/Departure_Airport__c.field-meta.xml
<CustomField>
    <fullName>Departure_Airport__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Departure Airport</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Departing Flights</relationshipLabel>
    <relationshipName>Departing_Flights</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>